deploy: 080fe55595c65017c2caf83a5915f511ef62474f

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="74a08ab" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="080fe55" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=74a08ab">
+	<link rel="stylesheet" href="/css/app.css?v=080fe55">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -147,7 +147,7 @@
 									<hr class="m-1" />
 									<div class="w-100 d-flex flex-wrap">
 										<div class="w-100">Recipients:</div>
-										<div id="mail_about_recipients" class="w-100 d-flex"></div>
+										<div id="mail_about_recipients" class="w-100 d-flex flex-wrap"></div>
 									</div>
 								</div>
 								<hr class="m-1" />
@@ -232,8 +232,8 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=74a08ab"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=74a08ab"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=080fe55"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=080fe55"></script>
 </body>
 
 </html>
