show selected folder on mail list display on mobile

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 					<hr class="xs-showit d-none" />
 					<div id='headers_container_full' class="overflow-auto h-100 d-flex flex-column mb-2">
 						<div id="multi_mail_options" class="d-flex flex-row w-100">
+							<div class="xs-showit">
+								<h4 id="current_folder_name"> </h4>
+							</div>
 							<div class="m-auto"></div>
 							<button type="button" id="btn_multi_markReadStatus" class="btn btn-bind btn-info"
 								data-read="true" disabled>Mark </button>
