fixed up corp/alli and ml buttons in mobile compose

--- a/index.html
+++ b/index.html
@@ -161,10 +161,13 @@
 					</div>
 					<div id="compose_container_full" class="overflow-auto h-100 d-flex d-none">
 						<div id="compose_container" class="d-flex flex-column h-100 w-100">
-							<div id="compose_options" class="w-100 d-flex ">
-								<button type="button" id="btn_addCorp" class="btn btn-bind btn-success">Corp</button>
-								<button type="button" id="btn_addAlli" class="btn btn-bind btn-success">
-									Alliance</button>
+							<div id="compose_options" class="w-100 d-flex">
+								<div id="btn_group_corp_alli">
+									<button type="button" id="btn_addCorp"
+										class="btn btn-bind btn-success mb-2">Corp</button>
+									<button type="button" id="btn_addAlli" class="btn btn-bind btn-success mb-2">
+										Alliance</button>
+								</div>
 								<div class="m-auto"></div>
 								<div id="btn_group_ml">
 								</div>
