--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="934a6f7" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="359e1a0" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=934a6f7">
+	<link rel="stylesheet" href="/css/app.css?v=359e1a0">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -90,6 +90,9 @@
 					<hr class="xs-showit d-none" />
 					<div id='headers_container_full' class="overflow-auto h-100 d-flex flex-column mb-2">
 						<div id="multi_mail_options" class="d-flex flex-row w-100">
+							<div class="xs-showit">
+								<h4 id="current_folder_name"> </h4>
+							</div>
 							<div class="m-auto"></div>
 							<button type="button" id="btn_multi_markReadStatus" class="btn btn-bind btn-info"
 								data-read="true" disabled>Mark </button>
@@ -158,10 +161,13 @@
 					</div>
 					<div id="compose_container_full" class="overflow-auto h-100 d-flex d-none">
 						<div id="compose_container" class="d-flex flex-column h-100 w-100">
-							<div id="compose_options" class="w-100 d-flex ">
-								<button type="button" id="btn_addCorp" class="btn btn-bind btn-success">Corp</button>
-								<button type="button" id="btn_addAlli" class="btn btn-bind btn-success">
-									Alliance</button>
+							<div id="compose_options" class="w-100 d-flex">
+								<div id="btn_group_corp_alli">
+									<button type="button" id="btn_addCorp"
+										class="btn btn-bind btn-success mb-2">Corp</button>
+									<button type="button" id="btn_addAlli" class="btn btn-bind btn-success mb-2">
+										Alliance</button>
+								</div>
 								<div class="m-auto"></div>
 								<div id="btn_group_ml">
 								</div>
@@ -232,8 +238,8 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=934a6f7"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=934a6f7"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=359e1a0"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=359e1a0"></script>
 </body>
 
 </html>
