nicer hamburger btn, switches to left arrow when viewing mail

--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
 						<h4>PodMail <small>β</small></h4>
 					</span>
 					<div class="m-auto"></div>
-					<button type="button" class="d-block d-sm-none btn btn-primary btn-sm btn-bind"
-						id="btn_viewRight">⟶</button>
 				</div>
 				<hr class="xs-showit d-none" />
 				<div class="d-flex flex-column h-100">
@@ -72,8 +70,8 @@
 				<div class="d-flex flex-column vh-100">
 					<div class="">
 						<div class="d-flex">
-							<button type="button" class="d-block d-sm-none btn btn-primary btn-sm btn-bind mr-3"
-								id="btn_viewLeft">⟵</button>
+							<button type="button" class="d-block d-sm-none btn btn-default btn-sm btn-bind mr-3"
+								id="btn_viewLeft"></button>
 							<h4>
 								<img class="d-inline float-start" id="charimg">
 								<h4 id="charname"></h4>
