deploy: 01e1a36dda44ef144221609e38e3074b5aec5900

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="359e1a0" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="01e1a36" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=359e1a0">
+	<link rel="stylesheet" href="/css/app.css?v=01e1a36">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -46,8 +46,6 @@
 						<h4>PodMail <small>β</small></h4>
 					</span>
 					<div class="m-auto"></div>
-					<button type="button" class="d-block d-sm-none btn btn-primary btn-sm btn-bind"
-						id="btn_viewRight">⟶</button>
 				</div>
 				<hr class="xs-showit d-none" />
 				<div class="d-flex flex-column h-100">
@@ -72,8 +70,8 @@
 				<div class="d-flex flex-column vh-100">
 					<div class="">
 						<div class="d-flex">
-							<button type="button" class="d-block d-sm-none btn btn-primary btn-sm btn-bind mr-3"
-								id="btn_viewLeft">⟵</button>
+							<button type="button" class="d-block d-sm-none btn btn-default btn-sm btn-bind mr-3"
+								id="btn_viewLeft"></button>
 							<h4>
 								<img class="d-inline float-start" id="charimg">
 								<h4 id="charname"></h4>
@@ -238,8 +236,8 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=359e1a0"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=359e1a0"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=01e1a36"></script>
+	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=01e1a36"></script>
 </body>
 
 </html>
