--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						</div>
 						<div id="mail_container" class="d-flex flex-column h-100 w-100">
 							<div id="mail_options" class="d-flex flex-row w-100">
-								<button type="button" id="btn_backToFolder" class="xs-hideit btn btn-bind btn-primary"
+								<button type="button" id="btn_backToFolder" class="xs-showit btn btn-bind btn-primary"
 									folder_id="1">Back</button>
 								<button type="button" id="btn_reply" class="btn btn-bind btn-primary">Reply</button>
 								<button type="button" id="btn_replyAll" class="btn btn-bind btn-primary">Reply
