--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				<h1>PodMail <small>β</small></h1>
 				<p>A web application for accessing and sending in game evemails.</p>
 				<p>
-					<a href="/" onClick="startLogin(); return false;"><img src="/img/ssologin.png"
-							alt="LOG IN with EVE Online" /></a>
+					<button id="btn_login" class="btn btn-default btn-bind"><img src="/img/ssologin.png"
+							alt="LOG IN with EVE Online" /></button>
 				</p>
 			</div>
 			<div id="readme"></div>
@@ -236,8 +236,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js"></script>
+	<script defer="" src="/js/SimpleESI.js"></script>
+	<script defer="" src="/js/esi.js"></script>
+	<script defer="" src="/js/app.js"></script>
 </body>
 
 </html>
