--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="d789b2f" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="901b63e" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=d789b2f">
+	<link rel="stylesheet" href="/css/app.css?v=901b63e">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -30,8 +30,8 @@
 				<h1>PodMail <small>β</small></h1>
 				<p>A web application for accessing and sending in game evemails.</p>
 				<p>
-					<a href="/" onClick="startLogin(); return false;"><img src="/img/ssologin.png"
-							alt="LOG IN with EVE Online" /></a>
+					<button id="btn_login" class="btn btn-default btn-bind"><img src="/img/ssologin.png"
+							alt="LOG IN with EVE Online" /></button>
 				</p>
 			</div>
 			<div id="readme"></div>
@@ -236,8 +236,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/auth.js?v=d789b2f"></script>
-	<script defer="" data-server_start="1752004823892" src="/js/app.js?v=d789b2f"></script>
+	<script defer="" src="/js/SimpleESI.js?v=901b63e"></script>
+	<script defer="" src="/js/esi.js?v=901b63e"></script>
+	<script defer="" src="/js/app.js?v=901b63e"></script>
 </body>
 
 </html>
