--- a/404.html
+++ b/404.html
@@ -9,11 +9,7 @@
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/app.css">
 	<meta charset="UTF-8">
-	<script>
-		const referrer = encodeURIComponent(window.location.pathname + window.location.search + window.location.hash);
-
-		window.location = '/?referrer=' + referrer;
-	</script>
+	<meta http-equiv="refresh" content="0;url=/">
 </head>
 
 <body>
