prevent autocomplete on evemail compose

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_recipients" class="w-100">
 								<input name="compose_recipients" type="text" class="w-100"
-									placeholder="Enter comma delimited character names here, they will be parsed and added below.">
+									placeholder="Enter comma delimited character names here, they will be parsed and added below."
+									autocomplete="off">
 							</div>
 							<div id="compose_recipients_container" class="w-100 d-flex flex-column">
 								<div id="compose_recipients_title" class="w-100">Recipients: <span
@@ -184,7 +185,8 @@
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_subject" class="w-100">
-								<input name="compose_subject" type="text" class="w-100" placeholder="Subject">
+								<input name="compose_subject" type="text" class="w-100" placeholder="Subject"
+									autocomplete="off">
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_body" class="overflow-auto w-100 h-100">
