deploy: 2286c3424a2ad382adbfdddbdf09e7b00f436313

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="6e1ee2b" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="2286c34" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=6e1ee2b">
+	<link rel="stylesheet" href="/css/app.css?v=2286c34">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -173,7 +173,8 @@
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_recipients" class="w-100">
 								<input name="compose_recipients" type="text" class="w-100"
-									placeholder="Enter comma delimited character names here, they will be parsed and added below.">
+									placeholder="Enter comma delimited character names here, they will be parsed and added below."
+									autocomplete="off">
 							</div>
 							<div id="compose_recipients_container" class="w-100 d-flex flex-column">
 								<div id="compose_recipients_title" class="w-100">Recipients: <span
@@ -184,7 +185,8 @@
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_subject" class="w-100">
-								<input name="compose_subject" type="text" class="w-100" placeholder="Subject">
+								<input name="compose_subject" type="text" class="w-100" placeholder="Subject"
+									autocomplete="off">
 							</div>
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_body" class="overflow-auto w-100 h-100">
@@ -236,9 +238,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js?v=6e1ee2b"></script>
-	<script defer="" src="/js/esi.js?v=6e1ee2b"></script>
-	<script defer="" src="/js/app.js?v=6e1ee2b"></script>
+	<script defer="" src="/js/SimpleESI.js?v=2286c34"></script>
+	<script defer="" src="/js/esi.js?v=2286c34"></script>
+	<script defer="" src="/js/app.js?v=2286c34"></script>
 </body>
 
 </html>
