some mails no longer have excessive height

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 								</div>
 								<hr class="m-1" />
 								<div id="mail_body_adjusted" data-contrast="false">🌗</div>
-								<div id="mail_body" class="w-100 h-100"></div>
+								<div id="mail_body" class="w-100"></div>
 							</div>
 						</div>
 					</div>
