--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="1cf0cf1" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="1a62b80" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=1cf0cf1">
+	<link rel="stylesheet" href="/css/app.css?v=1a62b80">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -153,7 +153,7 @@
 								</div>
 								<hr class="m-1" />
 								<div id="mail_body_adjusted" data-contrast="false">🌗</div>
-								<div id="mail_body" class="w-100 h-100"></div>
+								<div id="mail_body" class="w-100"></div>
 							</div>
 						</div>
 					</div>
@@ -238,9 +238,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js?v=1cf0cf1"></script>
-	<script defer="" src="/js/esi.js?v=1cf0cf1"></script>
-	<script defer="" src="/js/app.js?v=1cf0cf1"></script>
+	<script defer="" src="/js/SimpleESI.js?v=1a62b80"></script>
+	<script defer="" src="/js/esi.js?v=1a62b80"></script>
+	<script defer="" src="/js/app.js?v=1a62b80"></script>
 </body>
 
 </html>
