deploy: fd777292674c9c2e58f8e01ab1fcf1b68430d95d

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="069e65b" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="fd77729" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=069e65b">
+	<link rel="stylesheet" href="/css/app.css?v=fd77729">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<div class=" container-fluid content">
+	<div class="container-fluid content">
 		<noscript>
 			<div class="row">
 				<div class="col">
@@ -26,17 +26,20 @@
 			</div>
 		</noscript>
 		<div id="about" class="row d-none">
-			<div class="col">
-				<h1>PodMail <small>β</small></h1>
-				<p>A web application for accessing and sending in game evemails.</p>
-				<p>
-					<button id="btn_login" class="btn btn-default btn-bind"><img src="/img/ssologin.png"
-							alt="LOG IN with EVE Online" /></button>
-				</p>
+			<div class="col-md-6 order-1 order-md-2">
+				<div class="d-flex">
+					<span class="m-auto"></span>
+					<span>
+						<button id="btn_login" class="btn btn-default btn-bind">
+							<img src="/img/ssologin.png" alt="Log in with EVE Online" />
+						</button>
+					</span>
+				</div>
 			</div>
-			<div id="readme"></div>
-			<div><a class="btn btn-secondary external-link" href='https://github.com/zkillboard/podmail'
-					target="_blank">GitHub</a>
+			<div class="col-md-6 order-2 order-md-1">
+				<span id="readme"></span>
+				<a class="btn btn-secondary external-link mt-3" href="https://github.com/zkillboard/podmail"
+					target="_blank"> GitHub </a>
 			</div>
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
@@ -238,9 +241,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js?v=069e65b"></script>
-	<script defer="" src="/js/esi.js?v=069e65b"></script>
-	<script defer="" src="/js/app.js?v=069e65b"></script>
+	<script defer="" src="/js/SimpleESI.js?v=fd77729"></script>
+	<script defer="" src="/js/esi.js?v=fd77729"></script>
+	<script defer="" src="/js/app.js?v=fd77729"></script>
 </body>
 
 </html>
