some visual tweaks

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="d-flex flex-column vh-100">
 					<div class="">
 						<div class="d-flex">
-							<button type="button" class="d-block d-sm-none btn btn-default btn-sm btn-bind mr-3"
+							<button type="button" class="d-block xs-showit btn btn-default btn-sm btn-bind mr-3"
 								id="btn_viewLeft"></button>
 							<h4>
 								<img class="d-inline float-start" id="charimg">
@@ -121,7 +121,7 @@
 						</div>
 						<div id="mail_container" class="d-flex flex-column h-100 w-100">
 							<div id="mail_options" class="d-flex flex-row w-100">
-								<button type="button" id="btn_backToFolder" class="xs-showit btn btn-bind btn-primary"
+								<button type="button" id="btn_backToFolder" class="xs-hideit btn btn-bind btn-primary"
 									folder_id="1">Back</button>
 								<button type="button" id="btn_reply" class="btn btn-bind btn-primary">Reply</button>
 								<button type="button" id="btn_replyAll" class="btn btn-bind btn-primary">Reply
