--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="e21db20" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="a47695c" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=e21db20">
+	<link rel="stylesheet" href="/css/app.css?v=a47695c">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -73,7 +73,7 @@
 				<div class="d-flex flex-column vh-100">
 					<div class="">
 						<div class="d-flex">
-							<button type="button" class="d-block d-sm-none btn btn-default btn-sm btn-bind mr-3"
+							<button type="button" class="d-block xs-showit btn btn-default btn-sm btn-bind mr-3"
 								id="btn_viewLeft"></button>
 							<h4>
 								<img class="d-inline float-start" id="charimg">
@@ -121,7 +121,7 @@
 						</div>
 						<div id="mail_container" class="d-flex flex-column h-100 w-100">
 							<div id="mail_options" class="d-flex flex-row w-100">
-								<button type="button" id="btn_backToFolder" class="xs-showit btn btn-bind btn-primary"
+								<button type="button" id="btn_backToFolder" class="xs-hideit btn btn-bind btn-primary"
 									folder_id="1">Back</button>
 								<button type="button" id="btn_reply" class="btn btn-bind btn-primary">Reply</button>
 								<button type="button" id="btn_replyAll" class="btn btn-bind btn-primary">Reply
@@ -241,9 +241,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js?v=e21db20"></script>
-	<script defer="" src="/js/esi.js?v=e21db20"></script>
-	<script defer="" src="/js/app.js?v=e21db20"></script>
+	<script defer="" src="/js/SimpleESI.js?v=a47695c"></script>
+	<script defer="" src="/js/esi.js?v=a47695c"></script>
+	<script defer="" src="/js/app.js?v=a47695c"></script>
 </body>
 
 </html>
