--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/app.css">
+	<link rel="stylesheet" href="/css/supports.css">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
