deploy: b719a6e76e502d91c8d7e8784eacf74cb2b50254

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="a47695c" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="b719a6e" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,7 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=a47695c">
+	<link rel="stylesheet" href="/css/app.css?v=b719a6e">
+	<link rel="stylesheet" href="/css/supports.css?v=b719a6e">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -241,9 +242,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js?v=a47695c"></script>
-	<script defer="" src="/js/esi.js?v=a47695c"></script>
-	<script defer="" src="/js/app.js?v=a47695c"></script>
+	<script defer="" src="/js/SimpleESI.js?v=b719a6e"></script>
+	<script defer="" src="/js/esi.js?v=b719a6e"></script>
+	<script defer="" src="/js/app.js?v=b719a6e"></script>
 </body>
 
 </html>
