--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css">
-	<link rel="stylesheet" href="/css/supports.css">
+	<link rel="stylesheet" href="/css/app.css?v=--hash--">
+	<link rel="stylesheet" href="/css/supports.css?v=--hash--">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -45,8 +45,8 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a id='podmailLink' href='/'><img id="sitelogo" src="/img/podmail.png"
-								title="PodMail"></a></span><span>
+				<div class="d-flex"><span><a id='podmailLink' href='/?v=--hash--'><img id="sitelogo"
+								src="/img/podmail.png" title="PodMail"></a></span><span>
 						<h4>PodMail <small>β</small></h4>
 					</span>
 					<div class="m-auto"></div>
@@ -242,9 +242,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js"></script>
-	<script defer="" src="/js/esi.js"></script>
-	<script defer="" src="/js/app.js"></script>
+	<script defer="" src="/js/SimpleESI.js?v=--hash--"></script>
+	<script defer="" src="/js/esi.js?v=--hash--"></script>
+	<script defer="" src="/js/app.js?v=--hash--"></script>
 </body>
 
 </html>
