--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="--hash--" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
