sw fix, added aria-labels for checkboxes

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 						</div>
 						<div class="mail_header mail_header_top d-flex xs-hideit">
 							<span id="span-chk" class="span_chk form-check" mail_id="399254359">
-								<input id="mail_headers_checkbox" class="mail_checkbox form_check_input"
-									type="checkbox">
+								<input id="mail_headers_checkbox" class="mail_checkbox form_check_input" type="checkbox"
+									aria-label="Select All Checkbox">
 							</span>
 							<span class="from">Sender</span>
 							<span class="subject flex-fill">Subject</span>
