--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="216c98d" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="8468a40" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=216c98d">
-	<link rel="stylesheet" href="/css/supports.css?v=216c98d">
+	<link rel="stylesheet" href="/css/app.css?v=8468a40">
+	<link rel="stylesheet" href="/css/supports.css?v=8468a40">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -45,7 +45,7 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a id='podmailLink' href='/?v=216c98d'><img id="sitelogo"
+				<div class="d-flex"><span><a id='podmailLink' href='/?v=8468a40'><img id="sitelogo"
 								src="/img/podmail.png" title="PodMail"></a></span><span>
 						<h4>PodMail <small>β</small></h4>
 					</span>
@@ -103,8 +103,8 @@
 						</div>
 						<div class="mail_header mail_header_top d-flex xs-hideit">
 							<span id="span-chk" class="span_chk form-check" mail_id="399254359">
-								<input id="mail_headers_checkbox" class="mail_checkbox form_check_input"
-									type="checkbox">
+								<input id="mail_headers_checkbox" class="mail_checkbox form_check_input" type="checkbox"
+									aria-label="Select All Checkbox">
 							</span>
 							<span class="from">Sender</span>
 							<span class="subject flex-fill">Subject</span>
@@ -242,9 +242,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js?v=216c98d"></script>
-	<script defer="" src="/js/esi.js?v=216c98d"></script>
-	<script defer="" src="/js/app.js?v=216c98d"></script>
+	<script defer="" src="/js/SimpleESI.js?v=8468a40"></script>
+	<script defer="" src="/js/esi.js?v=8468a40"></script>
+	<script defer="" src="/js/app.js?v=8468a40"></script>
 </body>
 
 </html>
