--- a/404.html
+++ b/404.html
@@ -9,7 +9,12 @@
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/app.css">
 	<meta charset="UTF-8">
-	<meta http-equiv="refresh" content="0;url=/">
+	<script>
+		function onload() {
+			window.location = '/';
+		}
+		document.addEventListener('DOMContentLoaded', onload);
+	</script>
 </head>
 
 <body>
