show current folder regardless of screen size

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<hr class="xs-showit d-none" />
 					<div id='headers_container_full' class="overflow-auto h-100 d-flex flex-column mb-2">
 						<div id="multi_mail_options" class="d-flex flex-row w-100">
-							<div class="xs-showit">
+							<div>
 								<h4 id="current_folder_name"> </h4>
 							</div>
 							<div class="m-auto"></div>
