--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 								<button type="button" id="btn_reply" class="btn btn-bind btn-primary">Reply</button>
 								<button type="button" id="btn_replyAll" class="btn btn-bind btn-primary">Reply
 									All</button>
+								<button type="button" id="btn_forward" class="btn btn-bind btn-primary">Forward</button>
 								<div class="m-auto"></div>
 								<button type="button" id="btn_markReadStatus" class="btn btn-bind btn-info"
 									data-read="true">Mark </button>
