--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="088a6c3" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="c698294" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=088a6c3">
-	<link rel="stylesheet" href="/css/supports.css?v=088a6c3">
+	<link rel="stylesheet" href="/css/app.css?v=c698294">
+	<link rel="stylesheet" href="/css/supports.css?v=c698294">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -45,7 +45,7 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a id='podmailLink' href='/?v=088a6c3'><img id="sitelogo"
+				<div class="d-flex"><span><a id='podmailLink' href='/?v=c698294'><img id="sitelogo"
 								src="/img/podmail.png" title="PodMail"></a></span><span>
 						<h4>PodMail <small>β</small></h4>
 					</span>
@@ -127,6 +127,7 @@
 								<button type="button" id="btn_reply" class="btn btn-bind btn-primary">Reply</button>
 								<button type="button" id="btn_replyAll" class="btn btn-bind btn-primary">Reply
 									All</button>
+								<button type="button" id="btn_forward" class="btn btn-bind btn-primary">Forward</button>
 								<div class="m-auto"></div>
 								<button type="button" id="btn_markReadStatus" class="btn btn-bind btn-info"
 									data-read="true">Mark </button>
@@ -242,9 +243,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js?v=088a6c3"></script>
-	<script defer="" src="/js/esi.js?v=088a6c3"></script>
-	<script defer="" src="/js/app.js?v=088a6c3"></script>
+	<script defer="" src="/js/SimpleESI.js?v=c698294"></script>
+	<script defer="" src="/js/esi.js?v=c698294"></script>
+	<script defer="" src="/js/app.js?v=c698294"></script>
 </body>
 
 </html>
