--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
 	<link rel="stylesheet" href="/css/app.css?v=--hash--">
 	<link rel="stylesheet" href="/css/supports.css?v=--hash--">
 	<style id="current_folder">
@@ -196,8 +197,7 @@
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_body" class="overflow-auto w-100 h-100">
 								<div id="compose_body_textarea" name="compose_body" type="text"
-									class="overflow-auto w-100" placeholder="content here" contenteditable="true"
-									class="form-control">
+									class="overflow-auto w-100 zEditor" placeholder="content here" class="form-control">
 								</div>
 							</div>
 							<div id="compose_final_options" class="mb-2 d-flex">
@@ -243,6 +243,7 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
 	<script defer="" src="/js/SimpleESI.js?v=--hash--"></script>
 	<script defer="" src="/js/esi.js?v=--hash--"></script>
 	<script defer="" src="/js/app.js?v=--hash--"></script>
