deploy: 030978e2ad1fcbd3b0c46a8e08a37ebf57477ac2

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="c698294" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="030978e" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -7,8 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css?v=c698294">
-	<link rel="stylesheet" href="/css/supports.css?v=c698294">
+	<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
+	<link rel="stylesheet" href="/css/app.css?v=030978e">
+	<link rel="stylesheet" href="/css/supports.css?v=030978e">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -45,7 +46,7 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a id='podmailLink' href='/?v=c698294'><img id="sitelogo"
+				<div class="d-flex"><span><a id='podmailLink' href='/?v=030978e'><img id="sitelogo"
 								src="/img/podmail.png" title="PodMail"></a></span><span>
 						<h4>PodMail <small>β</small></h4>
 					</span>
@@ -196,8 +197,7 @@
 							<hr class="p-0 m-0 mt-1 mb-1" />
 							<div id="compose_body" class="overflow-auto w-100 h-100">
 								<div id="compose_body_textarea" name="compose_body" type="text"
-									class="overflow-auto w-100" placeholder="content here" contenteditable="true"
-									class="form-control">
+									class="overflow-auto w-100 zEditor" placeholder="content here" class="form-control">
 								</div>
 							</div>
 							<div id="compose_final_options" class="mb-2 d-flex">
@@ -243,9 +243,10 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js?v=c698294"></script>
-	<script defer="" src="/js/esi.js?v=c698294"></script>
-	<script defer="" src="/js/app.js?v=c698294"></script>
+	<script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+	<script defer="" src="/js/SimpleESI.js?v=030978e"></script>
+	<script defer="" src="/js/esi.js?v=030978e"></script>
+	<script defer="" src="/js/app.js?v=030978e"></script>
 </body>
 
 </html>
