--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="0c0ea25" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="29fe8ef" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -8,8 +8,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 	<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
-	<link rel="stylesheet" href="/css/app.css?v=0c0ea25">
-	<link rel="stylesheet" href="/css/supports.css?v=0c0ea25">
+	<link rel="stylesheet" href="/css/app.css?v=29fe8ef">
+	<link rel="stylesheet" href="/css/supports.css?v=29fe8ef">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -46,7 +46,7 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a id='podmailLink' href='/?v=0c0ea25'><img id="sitelogo"
+				<div class="d-flex"><span><a id='podmailLink' href='/?v=29fe8ef'><img id="sitelogo"
 								src="/img/podmail.png" title="PodMail"></a></span><span>
 						<h4>PodMail <small>β</small></h4>
 					</span>
@@ -238,15 +238,19 @@
 			</div>
 		</div>
 	</div>
-	<script defer="" src=" https://cdn.jsdelivr.net/npm/marked/marked.min.js">
+	<script defer="" type="text/javascript" src=" https://cdn.jsdelivr.net/npm/marked/marked.min.js">
 	</script>
-	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+	<script defer="" type="text/javascript"
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
-	<script defer="" src="/js/SimpleESI.js?v=0c0ea25"></script>
-	<script defer="" src="/js/esi.js?v=0c0ea25"></script>
-	<script defer="" src="/js/app.js?v=0c0ea25"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.7/purify.min.js"
+		integrity="sha512-78KH17QLT5e55GJqP76vutp1D2iAoy06WcYBXB6iBCsmO6wWzx0Qdg8EDpm8mKXv68BcvHOyeeP4wxAL0twJGQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script defer="" src="/js/SimpleESI.js?v=29fe8ef"></script>
+	<script defer="" src="/js/esi.js?v=29fe8ef"></script>
+	<script defer="" src="/js/app.js?v=29fe8ef"></script>
 </body>
 
 </html>
