--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="9123369" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="d80f349" data-bs-theme="dark">
 
 <head>
 	<title>PodMail</title>
@@ -8,8 +8,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 	<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
-	<link rel="stylesheet" href="/css/app.css?v=9123369">
-	<link rel="stylesheet" href="/css/supports.css?v=9123369">
+	<link rel="stylesheet" href="/css/app.css?v=d80f349">
+	<link rel="stylesheet" href="/css/supports.css?v=d80f349">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -46,7 +46,7 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a id='podmailLink' href='/?v=9123369'><img id="sitelogo"
+				<div class="d-flex"><span><a id='podmailLink' href='/?v=d80f349'><img id="sitelogo"
 								src="/img/podmail.png" title="PodMail"></a></span><span>
 						<h4>PodMail <small>β</small></h4>
 					</span>
@@ -60,13 +60,15 @@
 					<div id="folders" class="flex-fill"></div>
 					<hr />
 					<div id="info" class="d-flex flex-row justify-content-center align-items-center mb-2">
-						<div class="flex-fill d-flex justify-content-center">
+						<div class="flex-fill d-flex justify-content-left">
 							<a class="btn btn-info external-link" href="https://github.com/zkillboard/podmail"
 								target="_blank">GitHub</a>
 						</div>
-						<div class="flex-fill d-flex justify-content-center">
-							<a id="btn_logout" class="btn btn-bind btn-danger">Logout</a>
+						<div style="font-size:80%; text-align: right;">
+							<span id="utcClock"></span><br />
+							<span id="tqStatus"></span>
 						</div>
+
 					</div>
 				</div>
 			</div>
@@ -77,17 +79,19 @@
 						<div class="d-flex">
 							<button type="button" class="d-block xs-showit btn btn-default btn-sm btn-bind mr-3"
 								id="btn_viewLeft"></button>
-							<h4>
-								<img class="d-inline float-start" id="charimg">
-								<h4 id="charname"></h4>
-							</h4>
 							<small class="m-auto"></small>
 							<span id="inflight_spinner" class="spinner d-none"></span>
 							<span id="esi_issue" class="esi-container esi-cross d-none">! ESI !<br />issues</span>
-							<span style="font-size:80%; text-align: right;">
-								<span id="utcClock"></span><br />
-								<span id="tqStatus"></span>
-							</span>
+							<h4 id="charname" class="pt-2 pr-0 mr-0"></h4>
+							<div class="dropdown">
+								<button class="btn dropdown-toggle pt-0 pb-0" type="button" data-bs-toggle="dropdown" data-bs-offset="0, -1" aria-expanded="false">
+									<img id="charimg"src="/img/character.jpg"></button>
+								<ul class="dropdown-menu m-0 p-0">
+									<li class="dropdown-item"><span id="char_list" class="d-flex"></span></li>
+									<li><a id="btn_add_character" class="dropdown-item btn-bind text-end" href="#">Add Character</a></li>
+									<li><a id="btn_logout" class="dropdown-item btn-bind text-end" href="#">Logout</a></li>
+								</ul>
+							</div>
 						</div>
 					</div>
 					<hr class="xs-showit d-none" />
@@ -248,9 +252,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.7/purify.min.js"
 		integrity="sha512-78KH17QLT5e55GJqP76vutp1D2iAoy06WcYBXB6iBCsmO6wWzx0Qdg8EDpm8mKXv68BcvHOyeeP4wxAL0twJGQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script defer="" src="/js/SimpleESI.js?v=9123369"></script>
-	<script defer="" src="/js/esi.js?v=9123369"></script>
-	<script defer="" src="/js/app.js?v=9123369"></script>
+	<script defer="" src="/js/SimpleESI.js?v=d80f349"></script>
+	<script defer="" src="/js/esi.js?v=d80f349"></script>
+	<script defer="" src="/js/app.js?v=d80f349"></script>
 </body>
 
 </html>
