--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
 								<button class="btn dropdown-toggle pt-0 pb-0" type="button" data-bs-toggle="dropdown"
 									data-bs-offset="0, -1" aria-expanded="false">
 									<img id="charimg" src="/img/character.jpg"></button>
-								<ul class="dropdown-menu m-0 p-0">
-									<li class="dropdown-item"><span id="char_list" class="d-flex"></span></li>
-									<li><a id="btn_add_character" class="dropdown-item btn-bind text-end" href="#">Add
+								<ul id="maindropdownmenu" class="dropdown-menu m-0 p-0">
+									<li id="li_add_character"><a id="btn_add_character" class="dropdown-item btn-bind text-end" href="#">Add
 											Character</a></li>
 									<li><a id="btn_logout" class="dropdown-item btn-bind text-end" href="#">Logout</a>
 									</li>
