--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
 									data-bs-offset="0, -1" aria-expanded="false">
 									<img id="charimg" src="/img/character.jpg"></button>
 								<ul id="maindropdownmenu" class="dropdown-menu m-0 p-0">
+									<li class="dropdown-item no-propagate" id="show_names">
+										<label for="show_names_checkbox" class="dropdown-item-text">
+											<input type="checkbox" id="show_names_checkbox"> Show Character Names </label>
+									</li>
+									<li class="dropdown-item w-100"><span id="char_list" class="d-flex  justify-content-end"></span></li>
 									<li id="li_add_character"><a id="btn_add_character" class="dropdown-item btn-bind text-end" href="#">Add
 											Character</a></li>
 									<li><a id="btn_logout" class="dropdown-item btn-bind text-end" href="#">Logout</a>
