--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<input id="mail_headers_checkbox" class="mail_checkbox form_check_input" type="checkbox"
 									aria-label="Select All Checkbox">
 							</span>
-							<span class="from">Sender</span>
+							<span class="from"><label for="mail_headers_checkbox">Sender</label></span>
 							<span class="subject flex-fill">Subject</span>
 							<span id="mail_header_timestamp" class="timestamp text-end">Timestamp</span>
 						</div>
