removing beta tag

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
 				<div class="d-flex"><span><a id='podmailLink' href='/?v=--hash--'><img id="sitelogo"
 								src="/img/podmail.png" title="PodMail"></a></span><span>
-						<h4>PodMail <small>β</small></h4>
+						<h4>PodMail</h4>
 					</span>
 					<div class="m-auto"></div>
 				</div>
