--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en" id="html" githubhash="--hash--" data-bs-theme="dark">
 
 <head>
-	<title>PodMail</title>
+	<title>PodMail - EVE Online Mail Client</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	
+	<!-- OpenGraph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://podmail.zkillboard.com/">
+	<meta property="og:title" content="PodMail - EVE Online Mail Client">
+	<meta property="og:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta property="og:image" content="https://podmail.zkillboard.com/img/podmail.png">
+	
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary">
+	<meta property="twitter:url" content="https://podmail.zkillboard.com/">
+	<meta property="twitter:title" content="PodMail - EVE Online Mail Client">
+	<meta property="twitter:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta property="twitter:image" content="https://podmail.zkillboard.com/img/podmail.png">
+	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 	<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
