--- a/404.html
+++ b/404.html
@@ -2,13 +2,28 @@
 <html>
 
 <head>
-	<title>PodMail</title>
+	<title>PodMail - EVE Online Mail Client</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	
+	<!-- OpenGraph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://podmail.zkillboard.com/">
+	<meta property="og:title" content="PodMail - EVE Online Mail Client">
+	<meta property="og:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta property="og:image" content="https://podmail.zkillboard.com/img/podmail.png">
+	
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary">
+	<meta property="twitter:url" content="https://podmail.zkillboard.com/">
+	<meta property="twitter:title" content="PodMail - EVE Online Mail Client">
+	<meta property="twitter:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta property="twitter:image" content="https://podmail.zkillboard.com/img/podmail.png">
+	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/app.css">
-	<meta charset="UTF-8">
 	<script>
 		function onload() {
 			window.location = '/';
