deploy: 7db55db311ab911afc3e864f38827a89ce3e69a1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="c508124" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="7db55db" data-bs-theme="dark">
 
 <head>
 	<title>PodMail - EVE Online Mail Client</title>
@@ -9,23 +9,23 @@
 	
 	<!-- OpenGraph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://podmail.zkillboard.com/">
+	<meta property="og:url" content="https://podmail.space/">
 	<meta property="og:title" content="PodMail - EVE Online Mail Client">
 	<meta property="og:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
-	<meta property="og:image" content="https://podmail.zkillboard.com/img/podmail.png">
+	<meta property="og:image" content="https://podmail.space/img/podmail.png">
 	
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary">
-	<meta property="twitter:url" content="https://podmail.zkillboard.com/">
+	<meta property="twitter:url" content="https://podmail.space/">
 	<meta property="twitter:title" content="PodMail - EVE Online Mail Client">
 	<meta property="twitter:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
-	<meta property="twitter:image" content="https://podmail.zkillboard.com/img/podmail.png">
+	<meta property="twitter:image" content="https://podmail.space/img/podmail.png">
 	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 	<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
-	<link rel="stylesheet" href="/css/app.css?v=c508124">
-	<link rel="stylesheet" href="/css/supports.css?v=c508124">
+	<link rel="stylesheet" href="/css/app.css?v=7db55db">
+	<link rel="stylesheet" href="/css/supports.css?v=7db55db">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -62,7 +62,7 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a id='podmailLink' href='/?v=c508124'><img id="sitelogo"
+				<div class="d-flex"><span><a id='podmailLink' href='/?v=7db55db'><img id="sitelogo"
 								src="/img/podmail.png" title="PodMail"></a></span><span>
 						<h4>PodMail</h4>
 					</span>
@@ -277,9 +277,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.7/purify.min.js"
 		integrity="sha512-78KH17QLT5e55GJqP76vutp1D2iAoy06WcYBXB6iBCsmO6wWzx0Qdg8EDpm8mKXv68BcvHOyeeP4wxAL0twJGQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script defer="" src="/js/SimpleESI.js?v=c508124"></script>
-	<script defer="" src="/js/esi.js?v=c508124"></script>
-	<script defer="" src="/js/app.js?v=c508124"></script>
+	<script defer="" src="/js/SimpleESI.js?v=7db55db"></script>
+	<script defer="" src="/js/esi.js?v=7db55db"></script>
+	<script defer="" src="/js/app.js?v=7db55db"></script>
 </body>
 
 </html>
